--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,61 +6,94 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="128dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="181dp"
+        android:text="מתרגל"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="128dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="12dp"
+        android:text="סטודנט"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
     <TextView
+        android:id="@+id/textView"
+        android:layout_width="109dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="151dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:text="משתמש רשום"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="183dp"
         android:layout_height="34dp"
+        android:layout_marginStart="114dp"
+        android:layout_marginEnd="114dp"
         android:text="ברוכים הבאים ל-L4Tutor"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#DD2323"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.094" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="109dp"
-        android:layout_height="40dp"
-        android:fontFamily="sans-serif"
-        android:text="משתמש רשום"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="16sp"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="164dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="128dp"
-        android:layout_height="56dp"
-        android:text="סטודנט"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="218dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="128dp"
-        android:layout_height="56dp"
-        android:text="מתרגל"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="296dp" />
+        app:layout_constraintVertical_bias="0.047" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="132dp"
         android:layout_height="50dp"
+        android:layout_marginStart="151dp"
+        android:layout_marginEnd="128dp"
         android:onClick="onClickRegister"
         android:text="@string/RegisterBtn"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="463dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.655" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="211dp"
         android:layout_height="30dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginEnd="114dp"
+        android:layout_marginBottom="14dp"
         android:text="אם אינך רשום, אנא הרשם כאן "
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="433dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
