--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="9dp"
         android:layout_marginEnd="142dp"
         android:layout_marginBottom="181dp"
+        android:onClick="studentBtn"
         android:text="מתרגל"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
