--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -127,11 +127,12 @@
         app:layout_constraintTop_toBottomOf="@+id/extInputLayout4" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/RegisterNowBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
+        android:onClick="RegisterFormBtn"
         android:text="הירשם !"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/extInputLayout4" />
