CheckBox dependency fix
SOFSOF

--- a/app/src/main/res/layout/activity_more_info.xml
+++ b/app/src/main/res/layout/activity_more_info.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MoreInfo">
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText5"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:hint="Price"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="139dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
+        android:text="הכנס את הפרטים הבאים : "
+        android:textColor="#F10000"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
