--- a/app/src/main/res/layout/activity_filter_feed.xml
+++ b/app/src/main/res/layout/activity_filter_feed.xml
@@ -6,4 +6,170 @@
     android:layout_height="match_parent"
     tools:context=".FilterFeed">
 
+
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
+        android:text="הכנס את הפרטים הבאים : "
+        android:textColor="#F10000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:text="איזה קורסים תרצה לקחת?"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <CheckBox
+        android:id="@+id/OOP_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="17dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="מונחה עצמים"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Data_checkBox" />
+
+    <CheckBox
+        android:id="@+id/Data_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="28dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="מבני נתונים"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <CheckBox
+        android:id="@+id/Java_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="מבוא למדעי המחשב"
+        app:layout_constraintStart_toEndOf="@+id/infi1_checkBox"
+        app:layout_constraintTop_toBottomOf="@+id/Logic_checkBox" />
+
+    <CheckBox
+        android:id="@+id/Logic_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="לוגיקה ותורת הקבוצות"
+        app:layout_constraintStart_toEndOf="@+id/Number_Theory_checkBox"
+        app:layout_constraintTop_toBottomOf="@+id/OOP_checkBox" />
+
+    <CheckBox
+        android:id="@+id/Discrete_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="מבנים דיסקרטים"
+        app:layout_constraintEnd_toStartOf="@+id/OOP_checkBox"
+        app:layout_constraintStart_toEndOf="@+id/linear_Algebra2_checkBox"
+        app:layout_constraintTop_toBottomOf="@+id/Infi2_checkBox" />
+
+    <CheckBox
+        android:id="@+id/Infi2_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="6dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="אינפיניטיסימלי2"
+        app:layout_constraintEnd_toStartOf="@+id/Data_checkBox"
+        app:layout_constraintStart_toEndOf="@+id/Linear_Algebra1_checkBox"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <CheckBox
+        android:id="@+id/infi1_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="אינפיניטיסימלי1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Number_Theory_checkBox" />
+
+    <CheckBox
+        android:id="@+id/Number_Theory_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="13dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="תורת המספרים"
+        app:layout_constraintEnd_toStartOf="@+id/Logic_checkBox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linear_Algebra2_checkBox" />
+
+    <CheckBox
+        android:id="@+id/linear_Algebra2_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="אלגברה לינארית2"
+        app:layout_constraintEnd_toStartOf="@+id/Discrete_checkBox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Linear_Algebra1_checkBox" />
+
+    <CheckBox
+        android:id="@+id/Linear_Algebra1_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:checked="false"
+        android:clickable="true"
+        android:duplicateParentState="false"
+        android:text="אלגברה לינארית1"
+        app:layout_constraintEnd_toStartOf="@+id/Infi2_checkBox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <Button
+        android:id="@+id/searchBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="36dp"
+        android:text="חפש"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Java_checkBox" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
