--- a/app/src/main/res/layout/activity_filter_feed.xml
+++ b/app/src/main/res/layout/activity_filter_feed.xml
@@ -167,6 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="36dp"
+        android:onClick="SearchBTN"
         android:text="חפש"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Java_checkBox" />
