Little UI Changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,10 @@
         android:layout_width="128dp"
         android:layout_height="56dp"
         android:layout_marginStart="141dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="142dp"
-        android:layout_marginBottom="181dp"
         android:onClick="studentBtn"
-        android:text="מתרגל"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:text="Tutor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
@@ -26,76 +24,81 @@
         android:layout_width="128dp"
         android:layout_height="56dp"
         android:layout_marginStart="141dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="142dp"
-        android:layout_marginBottom="12dp"
         android:onClick="studentBtn"
-        android:text="סטודנט"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        android:text="Student"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="109dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="151dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="151dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="160dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="126dp"
         android:fontFamily="sans-serif"
-        android:text="משתמש רשום"
+        android:text="Sign In Here :"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="183dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="114dp"
-        android:layout_marginEnd="114dp"
-        android:text="ברוכים הבאים ל-L4Tutor"
+        android:layout_width="243dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginEnd="85dp"
+        android:text="Welcome To L4Tutor App!!"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#DD2323"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.047" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="132dp"
+        android:layout_width="128dp"
         android:layout_height="50dp"
-        android:layout_marginStart="151dp"
-        android:layout_marginEnd="128dp"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="142dp"
         android:onClick="onClickRegister"
-        android:text="@string/RegisterBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="211dp"
         android:layout_height="30dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginEnd="114dp"
-        android:layout_marginBottom="14dp"
-        android:text="אם אינך רשום, אנא הרשם כאן "
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:layout_marginTop="115dp"
+        android:text="If you don't have a signed User."
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="20dp"
+        android:text="Sign Up Here :"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
