--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -41,8 +41,8 @@
         android:id="@+id/textView_price"
         android:layout_width="49dp"
         android:layout_height="18dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="60dp"
         android:text="price"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -53,8 +53,8 @@
         android:id="@+id/textView_courses"
         android:layout_width="221dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:text="courses"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -78,6 +78,28 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:text="phoneNumber"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_price" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="5dp"
+        android:text="Price: "
+        android:textColor="#000000"
+        app:layout_constraintEnd_toStartOf="@+id/textView_price"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:text="Phone:"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toStartOf="@+id/textView_phoneNumber"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 </androidx.constraintlayout.widget.ConstraintLayout>
